--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,20 +44,17 @@ textarea {
 
 .past {
   background-color: #d3d3d3;
-  color: white;
 }
 
 .present {
   background-color: #ff6961;
-  color: white;
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
 }
 
-.saveBtn {
+.save-button {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
@@ -65,9 +62,14 @@ textarea {
   color: white;
 }
 
-.saveBtn i:hover {
+.save-button i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+.noBorder{
+  border:none;
+  background: none;
 }
 
 table{
@@ -104,13 +106,13 @@ input:focus{
 }
 
 .past-row{
-  background-color: gray;
+  background-color: rgb(192, 192, 192);
 }
 
 .current-row{
-  background-color: red;
+  background-color: rgb(255, 70, 70);
 }
 
 .future-row{
-  background-color: green;
+  background-color: rgb(113, 247, 113);
 }
